Add intersection observer

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/module.css" />
+    <link rel="stylesheet" href="./styles/intersections.css" />
     <link
       href="./styles/breakpoints/laptop.css"
       rel="stylesheet"
@@ -385,7 +386,8 @@
         <i class="fas fa-bars"></i>
       </div>
     </div>
-    <script src="./sendEmail.js"></script>
+    <script src="./intersections.js"></script>
     <script src="./activators.js"></script>
+    <script src="./sendEmail.js"></script>
   </body>
 </html>
