--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
       </section>
       <section class="habilities" id="habilities">
         <h2 class="habilities__title">HABILIDADES TÉCNICAS</h2>
-        <ul>
-          <li>
+        <ul class="habilities__container">
+          <li class="habilities__item a">
             <div><i class="fas fa-laptop-code"></i></div>
             <h3>Crear landing pages</h3>
             <p>
@@ -184,7 +184,7 @@
               como estilizarlas con librerías de CSS como Bootstrap o NextUI.
             </p>
           </li>
-          <li>
+          <li class="habilities__item b">
             <div><i class="fab fa-react icon-big"></i></div>
             <h3>SPA con React.js</h3>
             <p>
@@ -192,7 +192,7 @@
               Next.js.
             </p>
           </li>
-          <li>
+          <li class="habilities__item c">
             <div><i class="fab fa-node-js icon-big"></i></div>
             <h3>REST API con Node.js</h3>
             <p>
@@ -200,7 +200,7 @@
               Almacenando los datos en MongoDB.
             </p>
           </li>
-          <li>
+          <li class="habilities__item d">
             <div><i class="fas fa-terminal"></i></div>
             <h3>Despliegue de aplicaciones</h3>
             <p>
