--- a/index.html
+++ b/index.html
@@ -118,28 +118,36 @@
                 soy de San José, Costa Rica.
               </li>
               <li>
-                Soy bachiller y técnico medio en desarrollo de software.
-                Actualmente estudio Ingeniería en Sistemas en la universidad.
+                Soy bachiller, técnico medio en desarrollo de software. y
+                estudiante de Ingeniería en Sistemas.
               </li>
               <li>
-                Llevo un año estudiando desarrollo web de forma completamente
-                autodidacta, y es la rama del desarrollo de software que hasta
-                ahora más me ha gustado.
+                Llevo más un año estudiando desarrollo web de forma
+                completamente autodidacta, y es la rama del desarrollo de
+                software que hasta ahora más me gusta por lo sencillo que
+                podemos ver en una interfaz todo lo que vamos creando.
               </li>
               <li>
-                Estoy completamente dispuesto a aprender de otros
-                desarrolladores con más experiencia que yo, así como a aportar
-                mi conocimiento para quien que así lo requiera.
+                Me encantaría aprender de otros desarrolladores con más
+                experiencia que yo, así como a aportar mi conocimiento para
+                quien que así lo requiera.
               </li>
               <li>
                 Mi fuerte está en el desarrollo front-end, con tecnologías como
                 HTML, CSS, JavaScript, React.js, Next.js. Sin embargo, he creado
-                las APIs que uso en mis proyectos con Node.js y Express.js y las
-                distintas herramientas que tienen para trabajar.
+                las APIs que uso en mis proyectos con Node.js y Express.js.
+                Estas son las que más han significado un reto, pero las que más
+                disfruto a la hora de completar.
               </li>
               <li>
-                He desarrollado varios proyectos personales de distintos tipos,
-                que puedes encontrar más abajo.
+                Abajo encontraras algunos proyectos que he desarrollado, los
+                cuales son con los que más he aprendido a la hora de hacerlos,
+                pero tambien dejo mi cuenta de
+                <a
+                  href="https://github.com/jonathangg03/davdev-gallery-nextui"
+                  target="_blank"
+                  ><span>GitHub</span></a
+                >, pues tambien tengo otras actividades que voy realizando.
               </li>
               <li>
                 <a
@@ -155,20 +163,36 @@
         <div class="aboutme__objectives">
           <h2>MIS OBJETIVOS</h2>
           <ul>
-            <li>Trabajar del desarrollo de software.</li>
-            <li>Aprender de diferentes desarrolladores de la industria.</li>
-            <li>Aprender desarrollo móvil.</li>
             <li>
-              Poder enseñar desarrollo de software de la forma que a mí me
-              hubiera gustado aprender.
+              A contro plazo, mi objetivo principal es conseguir toda la
+              experiencia posible en el desarrollo de software. Junto con eso,
+              aprender ingles de forma fluida, que me abra todas las puertas
+              posibles.
             </li>
             <li>
-              Desarrollar una aplicación que tenga un impacto en la sociedad.
+              En temas de educación, me gustaría aprender principalmente
+              desarrollo movil, y sobre todo, robotica, o algo relacionado a
+              ello.
             </li>
-            <li>Estudiar robótica en algún momento de mi vida.</li>
             <li>
-              Vivir en algún país desarrollado por un tiempo, así como conocer
-              distintos países.
+              Tambien me gustaría enseñar lo aprendido, principalmente para
+              eliminar en las personas las barreras que en algún momento me
+              detuvieron a mi tambien.
+            </li>
+            <li>
+              Tengo la meta de, algún día, lanzar una aplicación que tenga un
+              gran impacto en la sociedad.
+            </li>
+            <li>
+              A mediano plazo, espero tener la oportunidad de conocer varios
+              países, pero principalmente, poder vivir en algún país
+              desarrollado.
+            </li>
+            <li>
+              Estos objetivos son importantes, pero estoy consciente de que no
+              tendrán significado, o la satisfacción esperada sí no logro uno
+              fundamental: Vivir de forma plena, con madurez y de forma efectiva
+              en cada hambito de mi vida.
             </li>
           </ul>
         </div>
