--- a/index.html
+++ b/index.html
@@ -114,41 +114,16 @@
           <article class="aboutme__personal">
             <ul>
               <li>
-                Mi nombre es Jonathan David García González, tengo 23 años, y
-                soy de San José, Costa Rica.
+                Mi nombre es Jonathan García González, tengo 23 años, y soy de
+                San José, Costa Rica. Soy bachiller, técnico medio en desarrollo
+                de software. y estudiante de Ingeniería en Sistemas.
               </li>
               <li>
-                Soy bachiller, técnico medio en desarrollo de software. y
-                estudiante de Ingeniería en Sistemas.
+                Mi fuerte es el desarrollo de interfaces con React.js, aunque
+                también he aprendido a crear distintas REST API que uso en mis
+                proyectos, así como un poco de despliegue de aplicaciones.
               </li>
-              <li>
-                Llevo más un año estudiando desarrollo web de forma
-                completamente autodidacta, y es la rama del desarrollo de
-                software que hasta ahora más me gusta por lo sencillo que
-                podemos ver en una interfaz todo lo que vamos creando.
-              </li>
-              <li>
-                Me encantaría aprender de otros desarrolladores con más
-                experiencia que yo, así como a aportar mi conocimiento para
-                quien que así lo requiera.
-              </li>
-              <li>
-                Mi fuerte está en el desarrollo front-end, con tecnologías como
-                HTML, CSS, JavaScript, React.js, Next.js. Sin embargo, he creado
-                las APIs que uso en mis proyectos con Node.js y Express.js.
-                Estas son las que más han significado un reto, pero las que más
-                disfruto a la hora de completar.
-              </li>
-              <li>
-                Abajo encontraras algunos proyectos que he desarrollado, los
-                cuales son con los que más he aprendido a la hora de hacerlos,
-                pero tambien dejo mi cuenta de
-                <a
-                  href="https://github.com/jonathangg03/davdev-gallery-nextui"
-                  target="_blank"
-                  ><span>GitHub</span></a
-                >, pues tambien tengo otras actividades que voy realizando.
-              </li>
+              <li></li>
               <li>
                 <a
                   class="nav__list-item-link"
@@ -159,42 +134,6 @@
               </li>
             </ul>
           </article>
-        </div>
-        <div class="aboutme__objectives">
-          <h2>MIS OBJETIVOS</h2>
-          <ul>
-            <li>
-              A contro plazo, mi objetivo principal es conseguir toda la
-              experiencia posible en el desarrollo de software. Junto con eso,
-              aprender ingles de forma fluida, que me abra todas las puertas
-              posibles.
-            </li>
-            <li>
-              En temas de educación, me gustaría aprender principalmente
-              desarrollo movil, y sobre todo, robotica, o algo relacionado a
-              ello.
-            </li>
-            <li>
-              Tambien me gustaría enseñar lo aprendido, principalmente para
-              eliminar en las personas las barreras que en algún momento me
-              detuvieron a mi tambien.
-            </li>
-            <li>
-              Tengo la meta de, algún día, lanzar una aplicación que tenga un
-              gran impacto en la sociedad.
-            </li>
-            <li>
-              A mediano plazo, espero tener la oportunidad de conocer varios
-              países, pero principalmente, poder vivir en algún país
-              desarrollado.
-            </li>
-            <li>
-              Estos objetivos son importantes, pero estoy consciente de que no
-              tendrán significado, o la satisfacción esperada sí no logro uno
-              fundamental: Vivir de forma plena, con madurez y de forma efectiva
-              en cada hambito de mi vida.
-            </li>
-          </ul>
         </div>
       </section>
       <section class="habilities" id="habilities">
@@ -231,6 +170,11 @@
               Desplegar APIs en Heroku, así como las aplicaciones de React.js en
               Vercel, Firebase y Heroku con Node.js.
             </p>
+          </li>
+          <li class="habilities__item a e">
+            <div><i class="fab fa-github icon-big"></i></div>
+            <h3>Control de versiones</h3>
+            <p>Control de versiones con Git y Github</p>
           </li>
         </ul>
       </section>
