Change about me content

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
           <div class="header__hero-description">
             <h1>Jonathan David García González</h1>
-            <p>Desarrollador web front-end junior</p>
+            <p>Desarrollador web frontend</p>
           </div>
         </div>
         <img src="./assets/hero.jpg" class="header__image--bg" alt="" />
@@ -112,16 +112,30 @@
           <article class="aboutme__personal">
             <ul>
               <li>
-                Mi nombre es Jonathan García González, tengo 23 años, y soy de
-                San José, Costa Rica. Soy bachiller, técnico medio en desarrollo
-                de software. y estudiante de Ingeniería en Sistemas.
+                Mi nombre es Jonathan García González. Soy desarrollador web
+                frontend junior, y estudiante de Ingeniería en sistemas.
               </li>
               <li>
-                Mi fuerte es el desarrollo de interfaces con React.js, aunque
-                también he aprendido a crear distintas REST API que uso en mis
-                proyectos, así como un poco de despliegue de aplicaciones.
+                Me especializo en la creación de interfaces, principalmente con
+                React.js, pero también tengo conocimientos en backend,
+                despliegue de aplicaciones y bases de datos no relacionales,
+                como MongoDB.
               </li>
-              <li></li>
+              <li>
+                Mi objetivo actual es aprender todo lo posible de
+                desarrolladores con los que tenga la oportunidad de trabajar, y
+                en algún momento poder compartir ese conocimiento con futuros
+                desarrolladores que lo necesiten.
+              </li>
+              <li>
+                También, espero llegar a crear una aplicación que tenga un gran
+                impacto en la sociedad, y que sea de gran ayuda para esta.
+              </li>
+              <li>
+                Abajo dejo mi curriculum, para que puedas conocerme mejor a
+                nivel profesional, así como una sección de contacto más
+                adelante.
+              </li>
               <li>
                 <a
                   class="nav__list-item-link"
