Fix aboutme description content

--- a/index.html
+++ b/index.html
@@ -122,14 +122,18 @@
                 como MongoDB.
               </li>
               <li>
-                Mi objetivo actual es aprender todo lo posible de
-                desarrolladores con los que tenga la oportunidad de trabajar, y
-                en algún momento poder compartir ese conocimiento con futuros
-                desarrolladores que lo necesiten.
+                Uno de mis objetivos principales al ingresar a la programación
+                es el de crear una aplicación que tenga un gran impacto en la
+                sociedad, y que sea de gran ayuda para esta.
               </li>
               <li>
-                También, espero llegar a crear una aplicación que tenga un gran
-                impacto en la sociedad, y que sea de gran ayuda para esta.
+                Tengo muchas ganas de contribuir con todo lo aprendido durante
+                este tiempo, mientras sigo en crecimiento constante.
+              </li>
+              <li>
+                Espero también, en algún momento, poder enseñar a futuros
+                desarrolladores, para que no pasen por los problemas de
+                entendimiento que yo y muchos pasamos.
               </li>
               <li>
                 Abajo dejo mi curriculum, para que puedas conocerme mejor a
