Change photo and add details

--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
             <h3>Despliegue de aplicaciones</h3>
             <p>
               Desplegar APIs en Heroku, así como las aplicaciones de React.js en
-              Vercel, Firebase y Heroku con Node.js.
+              Vercel, Firebase, y también en Heroku.
             </p>
           </li>
           <li class="habilities__item a e">
-            <div><i class="fab fa-github icon-big"></i></div>
+            <div><i class="fab fa-git-alt icon-big"></i></div>
             <h3>Control de versiones</h3>
             <p>Control de versiones con Git y Github</p>
           </li>
