Fix styles and header

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
               <li>
                 Me especializo en la creación de interfaces, principalmente con
                 React.js, pero también tengo conocimientos en backend,
-                despliegue de aplicaciones y bases de datos no relacionales,
-                como MongoDB.
+                despliegue de aplicaciones y un poco de bases de datos no
+                relacionales, como MongoDB.
               </li>
               <li>
-                Uno de mis objetivos principales al ingresar a la programación
-                es el de crear una aplicación que tenga un gran impacto en la
-                sociedad, y que sea de gran ayuda para esta.
+                Mi objetivo principal al ingresar a la programación es llegar a
+                crear una aplicación que tenga un gran impacto en la sociedad, y
+                que sea de gran ayuda para esta.
               </li>
               <li>
                 Tengo muchas ganas de contribuir con todo lo aprendido durante
