--- a/index.html
+++ b/index.html
@@ -286,25 +286,27 @@
           <div class="projects__item">
             <div class="projects__item-image">
               <img
-                src="./assets/projects/portal.jpg"
-                alt="Portal"
+                src="./assets/projects/miriio.jpg"
+                alt="Miriio"
                 loading="lazy"
               />
             </div>
             <div class="projects__item-description">
-              <h3>Portal</h3>
-              <h4>Recreación de portal.</h4>
+              <h3>Miriio</h3>
+              <h4>Red social</h4>
               <p>
-                Una recreación del portal web que usamos en la empresa donde
-                trabajo actualmente para mantener el registro de información que
-                necesitamos en el puesto.
+                Miriio es una pequeña red social donde los usuarios pueden hacer
+                sus publicaciones, seguir usuarios para ver las de ellos,
+                indicar si les gustan, entre otras cosas. Cuenta con una ventana
+                de ingreso y registro, y puedes personalizar tu perfil. Además,
+                es una PWA.
               </p>
               <div class="projects__item-description-buttons">
-                <a href="https://portal-d0251.web.app/" target="_blank"
+                <a href="https://miriio.vercel.app" target="_blank"
                   ><span>Ver proyecto</span></a
                 >
                 <a
-                  href="https://github.com/jonathangg03/portal-cesa-frontend"
+                  href="https://github.com/jonathangg03/social-media-frontend"
                   target="_blank"
                   ><span>Ver Código</span></a
                 >
