--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
   </head>
   <body>
     <div class="container" id="main">
-      <div class="responsive-title">
+      <!-- <div class="responsive-title">
         <img src="./assets/icon-orange.png" alt="" />
         <a href="/">DAVDEV</a>
-      </div>
+      </div> -->
       <header class="header">
         <div class="header__top">
           <div class="header__top-title">
