Fix: Instagram and Linkedin link

--- a/index.html
+++ b/index.html
@@ -339,13 +339,13 @@
               ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/jonathangg_03/" target="_blank"
+              <a href="https://www.instagram.com/jona_davdev/" target="_blank"
                 ><i class="fab fa-instagram"></i
               ></a>
             </li>
             <li>
               <a
-                href="https://www.linkedin.com/in/jonathan-david-garc%C3%ADa-gonz%C3%A1lez-9529a3219/"
+                href="https://www.linkedin.com/in/jonathan-dav-dev"
                 target="_blank"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
