Change colors and hero

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/your-path-to-fontawesome/css/fontawesome.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="./assets/icon-orange.png" type="image/png" />
+    <link rel="icon" href="./assets/icon.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -63,9 +63,7 @@
         <div class="header__top">
           <div class="header__top-title">
             <a href="/"
-              ><img src="./assets/icon-orange.png" alt="" /><span
-                >DAVDEV</span
-              ></a
+              ><img src="./assets/icon.png" alt="icon" /><span>DAVDEV</span></a
             >
           </div>
           <nav class="nav">
@@ -107,7 +105,7 @@
             <p>Desarrollador web.</p>
           </div>
         </div>
-        <img src="./assets/hero-test2.jpg" class="header__image--bg" alt="" />
+        <img src="./assets/hero-test3.jpg" class="header__image--bg" alt="" />
         <div class="header__closer">
           <i class="fas fa-chevron-up"></i>
         </div>
