Fix some colors

--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
             <p>Desarrollador web.</p>
           </div>
         </div>
-        <img src="./assets/hero-test3.jpg" class="header__image--bg" alt="" />
+        <img
+          src="./assets/hero.jpg"
+          class="header__image--bg"
+          alt="hero image"
+        />
         <div class="header__closer">
           <i class="fas fa-chevron-up"></i>
         </div>
@@ -298,6 +302,10 @@
             </div>
           </div>
         </div>
+        <p class="projects__cta">
+          Sí quieres ver más proyectos, visista mi
+          <a href="https://github.com/jonathangg03">GitHub</a>.
+        </p>
       </section>
       <section class="contact" id="contact">
         <h2>FORMULARIO DE CONTACTO</h2>
@@ -352,7 +360,7 @@
         </form>
         <article class="contact__social"></article>
       </section>
-      <div class="header__activators header__activator" id="header__activator">
+      <div class="header__activator" id="header__activator">
         <i class="fas fa-bars"></i>
       </div>
       <nav id="nav" class="nav-responsive">
