Fix: header and cta

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           </div>
         </div>
         <p class="projects__cta">
-          Sí, quieres ver más proyectos, visita mi
+          Sí quieres ver más de mis proyectos, visita mi
           <a href="https://github.com/jonathangg03">GitHub</a>.
         </p>
       </section>
