Update: Contact icons styles

--- a/index.html
+++ b/index.html
@@ -340,8 +340,17 @@
               ></a>
             </li>
             <li>
-              <a href="https://twitter.com/jona_davdev" target="_blank"
-                ><i class="fab fa-twitter"></i
+              <a
+                href="https://www.linkedin.com/in/jonathan-dav-dev"
+                target="_blank"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.youtube.com/channel/UCv3xpBFtUyuc5Ple62kOYSA"
+                target="_blank"
+                ><i class="fab fa-youtube"></i
               ></a>
             </li>
             <li>
@@ -350,10 +359,8 @@
               ></a>
             </li>
             <li>
-              <a
-                href="https://www.linkedin.com/in/jonathan-dav-dev"
-                target="_blank"
-                ><i class="fab fa-linkedin-in"></i
+              <a href="https://twitter.com/jona_davdev" target="_blank"
+                ><i class="fab fa-twitter"></i
               ></a>
             </li>
           </ul>
